Add initial form to start adventure

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,3 +1,61 @@
-<p>
-  start works!
-</p>
+<div class="jumbotron">
+  <h1>Welcome to Epicoding-Adventure!</h1>
+  <h4>Your path to coding enlightenment awaits... choose wisely!</h4>
+</div>
+
+<div class="center">
+  <img src="../assets/gandalf.jpg" alt="Gandalf the coding wizard"><br><br>
+  <h4>Create a new character, or select from a template!</h4><br>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <form>
+        <div class="form-group">
+          <label for="name">What is your name?</label>
+          <input type="text" #name class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="color">What is your favorite color?</label>
+          <input type="text" #color class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="color">What is your Epicodus track?</label>
+          <input type="text" #track class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="color">What is your coding tool of choice?</label>
+          <select class="form-control">
+            <option>Syntax Wizard</option>
+            <option>Smooth Talker</option>
+            <option>Conflict Resolver</option>
+            <option>Routing Expert</option>
+            <option>Dashing Debugger</option>
+          </select>
+        </div>
+      </form>
+    </div>
+
+    <div class="col-sm-6">
+      <form>
+        <label for="characters">Character List:</label><br>
+        <select class="form-control">
+          <option selected></option>
+          <option>Charlotte - Tech Savvy</option>
+          <option>Jessica - Design Diva</option>
+          <option>Chad - Code Bro</option>
+          <option>Poindexter - Tech Savvy</option>
+        </select>
+      </form>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="center">
+        <br><button type="button" class="btn btn-sm">Start your Adventure</button>
+      </div>
+    </div>
+  </div>
+</div>
