--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group">
           <label for="color">What is your coding tool of choice?</label>
-          <select class="form-control">
+          <select class="form-control" #codeTool>
             <option>Syntax Wizard</option>
             <option>Smooth Talker</option>
             <option>Conflict Resolver</option>
@@ -40,12 +40,9 @@
     <div class="col-sm-6">
       <form>
         <label for="characters">Character List:</label><br>
-        <select class="form-control">
+        <select class="form-control" #characterSelect>
           <option selected></option>
-          <option>Charlotte - Tech Savvy</option>
-          <option>Jessica - Design Diva</option>
-          <option>Chad - Code Bro</option>
-          <option>Poindexter - Tech Savvy</option>
+          <option *ngFor="let character of characters | async">{{character.name}}</option>
         </select>
       </form>
     </div>
@@ -54,7 +51,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="center">
-        <br><button type="button" class="btn btn-sm">Start your Adventure</button>
+        <br><button type="button" class="btn btn-sm" (click)="startGame(name.value, color.value, track.value, codeTool.value, characterSelect.value)">Start your Adventure</button>
       </div>
     </div>
   </div>
