--- a/src/app/level-one/level-one.component.html
+++ b/src/app/level-one/level-one.component.html
@@ -4,5 +4,5 @@
 <form>
   <a (click)="levelOneJobChoice()"> "Well, I need a job, so..."</a><br>
   <a (click)="levelOneAwesomeChoice()"> "It's not so much that I want to work for you as much as you need my skills."</a><br>
-  <a (click)="levelOneVomitChoice()"> You are just too nervous, and your lunch ends up on the table in front of you. Embarrassed, you get up and leave.</a><br>
+  <a (click)="levelOneVomitChoice()"> You are just too nervous, and your lunch ends up on the table in front of you. Embarrassed, you get up and leave.</a>
 </form>
