--- a/src/app/vomit/vomit.component.html
+++ b/src/app/vomit/vomit.component.html
@@ -1,3 +1,4 @@
-<p>
-  vomit works!
-</p>
+<h1>Level Two</h1>
+<h4>You don't get the call back. Maybe this isn't for you. You pick up a brochure for car mechanic school and decide to try something different.</h4>
+
+<a routerLink="" (click)="reset()">Restart</a>
