Add sweet soundz

--- a/src/app/awesome/awesome.component.html
+++ b/src/app/awesome/awesome.component.html
@@ -1,3 +1,9 @@
-<p>
-  awesome works!
-</p>
+<h1>Level Two</h1>
+<h4>After a series of grueling questions, you actually feel pretty good. You answered them all to the best of your ability, and the interviewer tells you she'll be in touch soon. Two weeks later, you get a call. You made it to the second round of interviews, and this one is with the big boss.</h4>
+<h4>On the day of the interview, you have to decide on what to wear. They said the culture is casual, but what does that mean? You have the option of dressing in:</h4>
+
+<form>
+  <a (click)="levelTwoHawaiianChoice()"> Hawaiian Themed top, complete with socks and Birkenstocks.</a><br>
+  <a (click)="levelTwoJeansChoice()"> You decide to go in jeans and a t-shirt. Clean, but not too nice.</a><br>
+  <a (click)="levelTwoSuitChoice()"> You suit up. You get your best 3-piece suit and fedora/pant suit and scarf, and walk out the door, head held high.</a>
+</form>
