--- a/src/app/desperate/desperate.component.html
+++ b/src/app/desperate/desperate.component.html
@@ -1,3 +1,8 @@
-<p>
-  desperate works!
-</p>
+<h1>Level Two</h1>
+<h4>Somehow, despite your lackluster answer, you got a callback for an interview with the big boss. You are filled with emotion, and prepare for a night of partying. You also need something to wear...</h4>
+
+<form>
+  <a (click)="levelTwoHawaiianChoice()"> Hawaiian Themed top, complete with socks and Birkenstocks.</a><br>
+  <a (click)="levelTwoJeansChoice()"> You decide to go in jeans and a t-shirt. Clean, but not too nice.</a><br>
+  <a (click)="levelTwoSuitChoice()"> You suit up. You get your best 3-piece suit and fedora/pant suit and scarf, and walk out the door, head held high.</a>
+</form>
