add all other routes to complete game

--- a/src/app/get-job/get-job.component.html
+++ b/src/app/get-job/get-job.component.html
@@ -1,3 +1,8 @@
-<p>
-  get-job works!
-</p>
+<h1>Level Four</h1>
+<h4>You got the job! But you come down with a cold. In orientation, you carry a box of Kleenex with you everywhere. Your new coworkers shun you because of your sneezing and coughing. You work hard to impress the boss but the delirium of your cold-induced state results in bountiful typos throughout your code.</h4>
+<h4>You wake up the next morning and find you can't get out of bed. You call in sick and end up talking to Peggy, the receptionist who gave you the weird eye on day one.</h4>
+
+<form>
+  <a (click)="levelFourCake()"> You ask her to please explain to the boss that you'll work from home and you'll bring her a cake.</a><br>
+  <a (click)="levelFourPTO()"> You end up arguing over PTO when trying to explain that you need to use a sick day and you're not sure if she even listened.</a>
+</form>
