add gifs to all routes

--- a/src/app/desperate/desperate.component.html
+++ b/src/app/desperate/desperate.component.html
@@ -1,6 +1,8 @@
 <h1>Level Two</h1>
 <h4>Somehow, despite your lackluster answer, you got a callback for an interview with the big boss. You are filled with emotion, and prepare for a night of partying. You also need something to wear...</h4>
 
+<img src="../assets/aceventura.gif" alt="Hawaiian Shirt"><br><br>
+
 <form>
   <a (click)="levelTwoHawaiianChoice()"> Hawaiian Themed top, complete with socks and Birkenstocks.</a><br>
   <a (click)="levelTwoJeansChoice()"> You decide to go in jeans and a t-shirt. Clean, but not too nice.</a><br>
