--- a/src/app/get-fired/get-fired.component.html
+++ b/src/app/get-fired/get-fired.component.html
@@ -2,4 +2,6 @@
 <h4>Peggy hates cake. She passes on the message to the boss that you can't be bothered to come in because you're going to Cancun for the weekend. You get a strongly worded email regarding your attendance from the higher ups. When you call the boss to explain, you sneeze over him talking to you about company policies. He thinks you're faking your sneezes to get out of trouble and explains about honesty and company policy.</h4>
 <h4>Your dog picks that moment to jump on your lap, making you scream in rage. Your boss fires you and says he'll mail your stuff. Maybe this isn't the right thing for you.</h4>
 
+<img src="../assets/carolbeer.gif" alt="Computer says no"><br><br>
+
 <a (click)="reset()">Restart</a>
