--- a/src/app/level-one/level-one.component.html
+++ b/src/app/level-one/level-one.component.html
@@ -1,6 +1,8 @@
 <h1>Level One</h1>
 <h4>You have landed your first interview since graduating Epicodus. You're nervous. You try to hide it, but you sense your interviewer knows it. Your palms are sweaty. Your interviewer sneezes. You flinch. Your interviewer asks you why you want to work for her company. You smile nervously as you say:</h4>
 
+<img src="../assets/adventuretime.gif" alt="You begin your adventure"><br><br>
+
 <form>
   <a (click)="levelOneJobChoice()"> "Well, I need a job, so..."</a><br>
   <a (click)="levelOneAwesomeChoice()"> "It's not so much that I want to work for you as much as you need my skills."</a><br>
