--- a/src/app/lose/lose.component.html
+++ b/src/app/lose/lose.component.html
@@ -3,4 +3,6 @@
 
 <h4>You think maybe you'll go back to school or try again someday, but your desk chair is pretty comfy.</h4>
 
+<img src="../assets/gitmerge.gif" alt="Fail to merge"><br><br>
+
 <a (click)="reset()">Restart</a>
