--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="center">
-  <img src="../assets/gandalf.jpg" alt="Gandalf the coding wizard"><br><br>
+  <img src="../assets/home.gif" alt="IT Crowd on fire"><br><br>
   <h4>Create a new character, or select from a template!</h4><br>
 </div>
 
