--- a/src/app/vomit/vomit.component.html
+++ b/src/app/vomit/vomit.component.html
@@ -1,4 +1,7 @@
 <h1>Level Two</h1>
 <h4>You don't get the call back. Maybe this isn't for you. You pick up a brochure for car mechanic school and decide to try something different.</h4>
 
+<img src="../assets/sweetdee.gif" alt="Sweet Dee"><br><br>
+<img src="../assets/dogmechanic.gif" alt="Dog Mechanic"><br><br>
+
 <a routerLink="" (click)="reset()">Restart</a>
