--- a/src/app/awesome/awesome.component.html
+++ b/src/app/awesome/awesome.component.html
@@ -2,6 +2,7 @@
 <h4>After a series of grueling questions, you actually feel pretty good. You answered them all to the best of your ability, and the interviewer tells you she'll be in touch soon. Two weeks later, you get a call. You made it to the second round of interviews, and this one is with the big boss.</h4>
 <h4>On the day of the interview, you have to decide on what to wear. They said the culture is casual, but what does that mean? You have the option of dressing in:</h4>
 
+  <img src="../assets/americanpsycho.gif" alt="You're the boss"><br><br>
 <form>
   <a (click)="levelTwoHawaiianChoice()"> Hawaiian Themed top, complete with socks and Birkenstocks.</a><br>
   <a (click)="levelTwoJeansChoice()"> You decide to go in jeans and a t-shirt. Clean, but not too nice.</a><br>
