--- a/src/app/jeans/jeans.component.html
+++ b/src/app/jeans/jeans.component.html
@@ -1,6 +1,8 @@
 <h1>Level Three</h1>
 <h4>The interviewer likes your style. You ooze confidence all over the office. You're sure you've got it in the bag. The interviewer thanks you for coming and stands up to leave. A warm spring breeze floats in from the window, the interviewer coughs loudly, covering his mouth with his right hand. At the door, he reaches his right hand out to shake your hand. You:</h4>
 
+<img src="../assets/awkward.gif" alt="Awkward Moment"><br><br>
+
 <form>
   <a (click)="levelThreeBackAway()"> Awkwardly smooth your shirt and thank him, backing away quickly like a frightened rabbit.</a><br>
   <a (click)="levelThreeWinChoice()"> You shake his hand vigorously, maintaining eye contact until he looks away.</a><br>
