--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: serif;
+}
+
+img {
+  border-radius: 10px;
+  border: 1px solid black;
+}
