add final gif to suit route

--- a/src/app/suit/suit.component.html
+++ b/src/app/suit/suit.component.html
@@ -1,4 +1,6 @@
 <h1>Level Three</h1>
 <h4>You decide to come wearing your best suit/pant suit. Before the interview, you stop in for a nice hot coffee. It's chilly outside. On your walk from the bus to the office, someone bumps into you, unseating the lid of your coffee, and it seems like a trip to the dry cleaner is in order. Furious, you push the offender, and the cop nearby takes action. By the time you realize what you've done, you're on your way to the police station in cuffs, looking at large fines. Needless to say, you don't get the job. Should have worn jeans! Also, your suit is ruined.</h4>
 
+<img src="../assets/arrested.gif" alt="End of the line"><br><br>
+
 <a (click)="reset()">Restart</a>
