add styling to links and spacing

--- a/src/app/call-in-sick/call-in-sick.component.html
+++ b/src/app/call-in-sick/call-in-sick.component.html
@@ -5,6 +5,6 @@
 <img src="../assets/jakethedog.gif" alt="Jake is sick"><br><br>
 
 <form>
-  <a (click)="levelFiveLoud()"> You tell him he needs to implement three more complex functions and that you might as well do it yourself since he clearly has no idea what he's doing. You take over the computer and add ten extra lines of code.</a><br>
+  <a (click)="levelFiveLoud()"> You tell him he needs to implement three more complex functions and that you might as well do it yourself since he clearly has no idea what he's doing. You take over the computer and add ten extra lines of code.</a><br><br>
   <a (click)="levelFiveQuiet()"> You discover the entire company has no linters or spell-checks on any computer. You set up some sweet linters.</a>
 </form>
