--- a/src/app/desperate/desperate.component.html
+++ b/src/app/desperate/desperate.component.html
@@ -4,7 +4,7 @@
 <img src="../assets/aceventura.gif" alt="Hawaiian Shirt"><br><br>
 
 <form>
-  <a (click)="levelTwoHawaiianChoice()"> Hawaiian Themed top, complete with socks and Birkenstocks.</a><br>
-  <a (click)="levelTwoJeansChoice()"> You decide to go in jeans and a t-shirt. Clean, but not too nice.</a><br>
+  <a (click)="levelTwoHawaiianChoice()"> Hawaiian Themed top, complete with socks and Birkenstocks.</a><br><br>
+  <a (click)="levelTwoJeansChoice()"> You decide to go in jeans and a t-shirt. Clean, but not too nice.</a><br><br>
   <a (click)="levelTwoSuitChoice()"> You suit up. You get your best 3-piece suit and fedora/pant suit and scarf, and walk out the door, head held high.</a>
 </form>
