--- a/src/app/get-job/get-job.component.html
+++ b/src/app/get-job/get-job.component.html
@@ -5,6 +5,6 @@
 <img src="../assets/yay.gif" alt="Yay!!!!!!"><br><br>
 
 <form>
-  <a (click)="levelFourCake()"> You ask her to please explain to the boss that you'll work from home and you'll bring her a cake.</a><br>
+  <a (click)="levelFourCake()"> You ask her to please explain to the boss that you'll work from home and you'll bring her a cake.</a><br><br>
   <a (click)="levelFourPTO()"> You end up arguing over PTO when trying to explain that you need to use a sick day and you're not sure if she even listened.</a>
 </form>
