--- a/src/app/jeans/jeans.component.html
+++ b/src/app/jeans/jeans.component.html
@@ -4,7 +4,7 @@
 <img src="../assets/awkward.gif" alt="Awkward Moment"><br><br>
 
 <form>
-  <a (click)="levelThreeBackAway()"> Awkwardly smooth your shirt and thank him, backing away quickly like a frightened rabbit.</a><br>
-  <a (click)="levelThreeWinChoice()"> You shake his hand vigorously, maintaining eye contact until he looks away.</a><br>
+  <a (click)="levelThreeBackAway()"> Awkwardly smooth your shirt and thank him, backing away quickly like a frightened rabbit.</a><br><br>
+  <a (click)="levelThreeWinChoice()"> You shake his hand vigorously, maintaining eye contact until he looks away.</a><br><br>
   <a (click)="levelThreeHug()"> You hand him your business card and lean in, saying "I'm a hugger!"</a>
 </form>
