--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,15 @@ img {
   border-radius: 10px;
   border: 1px solid black;
 }
+
+a {
+  font-size: 150%;
+  border-radius: 10px;
+  border: 6px solid black;
+}
+
+a:hover {
+background-color: teal;
+color: white;
+text-decoration: none;
+}
